Add pre-payment product conversion workflow
